# finsafe-deerflow-adapter

./: .gitignore  README.md  pyproject.toml
docker/: docker-compose.yaml  finsafe-daemon.yaml
docs/: INTEGRATION.md  finsafe-policy.md  finsafe-security-guide.md
examples/deer-flow/: FINSAFE.md  config-sandbox-finsafe.yaml  docker-compose.finsafe.yaml  finsafe-daemon.yaml
finsafe_deerflow_adapter/: __init__.py  defaults.py  http.py  policy.py  provider.py
finsafe_deerflow_provider/: __init__.py  policy.py  provider.py  sandbox.py
scripts/: smoke.sh  verify-sidecar.sh
tests/: _helpers.py  test_integration.py  test_network_allowlist.py  test_policy.py  test_provider.py  test_provider_config.py
