[project]
name = "finsafe-deerflow-adapter"
version = "0.1.1"
description = "FinSAFE SaaS sandbox provider for DeerFlow (plugin via sandbox.use)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    # PyPI deerflow-harness is stale (0.0.1); install from upstream monorepo subdirectory.
    "deerflow-harness @ git+https://github.com/bytedance/deer-flow.git@c9b6131f8fc4beb186632556ea3d589488edc90f#subdirectory=backend/packages/harness",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["finsafe_deerflow_adapter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require a running finsafe-saas sidecar",
]

# deerflow-harness: see dependencies (git subdirectory pin). To bump the pin,
# edit pyproject.toml and finsafe_deerflow_adapter/_deerflow_pin.py, then tag a release.
