[project]
name = "finsafe-deerflow-provider"
version = "0.2.3"
description = "FinSAFE SaaS sandbox provider for DeerFlow (plugin via sandbox.use)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    # Consumer environment must provide deerflow-harness. PyPI has a stale 0.0.1
    # release, so standalone installs should pull harness from the DeerFlow repo
    # (see README). In the DeerFlow backend workspace, harness is provided by
    # the local workspace package, avoiding a source conflict.
    "deerflow-harness>=2.1.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["finsafe_deerflow_provider"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require a running finsafe-saas sidecar",
]
